[dependencies]
deno_core = "0.336.0"
deno_fs = "0.100.0"
deno_resolver = "0.21.0"
deno_runtime = { version = "0.198.0", features = ["transpile"] }
rustler = "0.36.0"
serde_json = "1.0.133"
serde_v8 = "0.245.0"
slab = "0.4.9"
sys_traits = "0.1.7"
tokio = "1.41.1"

[lib]
crate-type = ["cdylib"]
name = "deno_rider"
path = "src/lib.rs"

[package]
edition = "2021"
name = "deno_rider"
version = "0.2.1"
